final final draft

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
   <body>
     <header>
-      <img src="http://vignette.wikia.nocookie.net/fictionalcrossover/images/c/c8/Rick_and_Morty_logo.png/revision/latest/scale-to-width-down/640?cb=20150515125959" width="250px" id="rmlogo">
+      <img src="https://vignette.wikia.nocookie.net/fictionalcrossover/images/c/c8/Rick_and_Morty_logo.png/revision/latest/scale-to-width-down/640?cb=20150515125959" width="250px" id="rmlogo">
       <h3 id='smallHeader'>Interdimensional Cable Quiz!!!</h3>
     </header>
     
